@@ -122,7 +122,7 @@ data:extend({
     type = "item",
     name = "pm-vehicle-octane-fuel-canister",
     icon_size = 64,
-    icon = "__periodic-madness__/graphics/icons/diesel-fuel-canister.png",
+    icon = "__periodic-madness__/graphics/icons/vehicle-octane-fuel-canister.png",
     fuel_value = "32MJ",
     fuel_category = "pm-vehicle-fuel-canisters",
     fuel_acceleration_multiplier = 2,
@@ -136,7 +136,7 @@ data:extend({
     type = "item",
     name = "pm-industrial-octane-fuel-canister",
     icon_size = 64,
-    icon = "__periodic-madness__/graphics/icons/diesel-fuel-canister.png",
+    icon = "__periodic-madness__/graphics/icons/industrial-octane-fuel-canister.png",
     fuel_value = "32MJ",
     fuel_category = "pm-fuel-canisters",
     fuel_emissions_multiplier = 0.75,
